Do no expose hateoas api